# oncoinfo

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows.yml
desktop/: BUILD.md  CMakeLists.txt  LICENSE.txt
desktop/installer/: oncoinfo.iss
desktop/resources/: oncoinfo.qrc  oncoinfo.rc
desktop/resources/translations/: en.json  nl.json
desktop/src/: main.cpp
desktop/src/auth/: AuthManager.cpp  AuthManager.h  WindowsAuth.cpp  WindowsAuth.h
desktop/src/core/: AuditLogger.cpp  AuditLogger.h  Database.cpp  Database.h  DrugRepository.cpp  DrugRepository.h  FavoritesRepository.cpp  FavoritesRepository.h  SettingsManager.cpp  SettingsManager.h  UserRepository.cpp  UserRepository.h
desktop/src/i18n/: TranslationManager.cpp  TranslationManager.h
desktop/src/models/: Drug.h  Hospital.h  User.h
desktop/src/network/: NetworkManager.cpp  NetworkManager.h  SyncService.cpp  SyncService.h
desktop/src/ui/: AdminPanel.cpp  AdminPanel.h  DrugDetailWidget.cpp  DrugDetailWidget.h  DrugsPage.cpp  DrugsPage.h  FavoritesPanel.cpp  FavoritesPanel.h  HomePage.cpp  HomePage.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  PatientFolderDialog.cpp  PatientFolderDialog.h  SearchBar.cpp  SearchBar.h  StyleSheet.cpp  StyleSheet.h
desktop/tools/: migrate_from_supabase.py  seed_database.cpp
electron/: main.cjs  preload.cjs
src/: App.tsx  index.css  main.tsx
src/components/: DemoRestrictionDialog.tsx  ErrorBoundary.tsx  FolderMilestoneDialog.tsx  PlatformUpdatePopup.tsx  ReleaseNotesDialog.tsx
src/components/admin/: ApiDocumentation.tsx  (+11 more)
src/contexts/: AuthContext.tsx  HospitalContext.tsx
src/hooks/: useAuth.ts  useDischargeTemplates.ts  useDrugs.ts  useFavorites.ts  useMostUsed.ts  useNewDrugsNotification.ts  usePatientFolderContent.ts  useSpecialtyOrder.ts  useTemplateFavorites.ts  useTemplateMostUsed.ts  useTranslatedDrug.ts  useTranslatedStrings.ts  useTrials.ts  useUserDrugOrder.ts  useUserManagement.ts
src/i18n/: index.ts
src/pages/: AdminPage.tsx  ColorPreview.tsx  DischargeTemplatesPage.tsx  DrugDetailPage.tsx  DrugsPage.tsx  HospitalManagementPage.tsx  Index.tsx  LoginPage.tsx  NotFound.tsx  ResetPasswordPage.tsx  TrialDetailPage.tsx  TrialsPage.tsx  UserManualPage.tsx  WelcomePage.tsx
src/types/: drug.ts  trial.ts
supabase/: config.toml
supabase/migrations/: 20260115110726_9ca6aff8-5dea-42a4-8ad5-ec1431cca8d2.sql  20260115144418_e819fed6-e72b-41f0-af21-5a6990857df3.sql  20260115150507_d36b0b85-bbc4-488d-91f0-27644de894a3.sql  20260115151050_5f0868bb-1c62-409d-b3d2-ebda4edc9281.sql  20260115151550_648763b8-fa08-44e3-8368-8c9883ddda6b.sql  20260205114734_0973c246-b35b-4e5b-933f-794b853d4d94.sql  20260205132856_55ba94b1-6a0b-43ff-bcb7-69c04e0494d0.sql  20260206122617_f1bd1210-1204-48de-bdf0-10d442ef51a8.sql  20260209082219_4162a3f4-51dd-446a-acdb-7ee5fc35b259.sql  20260209094705_3b98cda2-48e8-495b-b5de-38c3c04f73ec.sql  20260209100219_4bdbfa55-2c85-4d15-860d-a2185eb41f26.sql  20260209103736_54c7b9cf-e317-4866-9113-eb65803eff80.sql  20260209105147_022f273b-e64d-41b2-ad32-a1d93ecb8205.sql  20260209111551_f2828d79-a78e-4548-b94b-f149e445b0fe.sql  20260209152109_6f7c9afe-0f6c-4db9-ae48-b4d6018afdd0.sql  20260209152517_4e31a155-6156-4135-9c4a-268489a831d6.sql  20260210102911_aa1f96ca-7a1b-4ef5-b12b-674d9ac15886.sql  20260210115022_a2991af5-a74a-4c4b-97a8-48b126baf6af.sql  20260210115635_077b52ae-bdaf-43b6-9946-6b69f7749fa2.sql  20260210160440_c0d62dfb-b241-4bc0-90ba-05888630eb5a.sql  20260210160707_df616e10-e74e-4027-b26c-02801424c9fa.sql  20260211110348_617c4383-2e7b-4e0e-ab01-8249dd2f1ffa.sql  20260211113210_37c636b1-6094-4a57-9fc2-e37fbd1a9d30.sql  20260211114703_bd2a3541-adb3-4d95-a347-b6ee20c05d50.sql  20260211114938_4e8e7f48-8cdb-45fc-8cdf-359c8b6ec147.sql  20260211120159_27e09d88-fac4-4b86-8d2e-99a715fd13b4.sql  (+44 more)
(+60 files in other folders)
